--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,7 +32,7 @@ dependencies:
   flutter_markdown: 0.7.7
   google_fonts: 6.3.1
   intl: 0.20.2
-  json_theme: 9.0.1
+  # json_theme_plus: ^6.8.1 # Removed due to compatibility issues
   material_color_utilities: ^0.11.1
   material_design_icons_flutter: 7.0.7296
   ndialog: 4.5.0+1
@@ -72,3 +72,8 @@ sentry:
   upload_source_maps: true
   include_native_sources: true
   commits: false
+
+dependency_overrides:
+  # Try to force compatible versions
+  flutter:
+    sdk: flutter
