feat(variations): add ui component variations support
- Add AppVariations model to manage component variations
- Add variations page to theme preview
- Update app config editor to support variations
- Add variations assets and json configuration

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,6 +66,7 @@ flutter:
   uses-material-design: true
   assets:
     - assets/icon.png
+    - assets/variations/
 
 sentry:
   upload_native_symbols: true
